# nOPe-1

./: .gitignore  nOPe-1.code-workspace
subassembly/encoder/firmware/: Cargo.toml  workspaceCargo.toml
subassembly/encoder/firmware/.cargo/: config
subassembly/encoder/firmware/led_matrix/: Cargo.toml
subassembly/encoder/firmware/led_matrix/src/: lib.rs
subassembly/encoder/firmware/src/: main.rs  rib_board.rs
subassembly/encoder/old/rotary_input_board/: rotary_input_board.kicad_pcb  rotary_input_board.kicad_prl
subassembly/encoder/old/rotary_input_board/output/: kicad_circular_tracks_test-B_Cu.gbl  kicad_circular_tracks_test-B_Mask.gbs  kicad_circular_tracks_test-B_Paste.gbp  kicad_circular_tracks_test-B_Silkscreen.gbo  kicad_circular_tracks_test-Edge_Cuts.gm1  kicad_circular_tracks_test-F_Cu.gtl  kicad_circular_tracks_test-F_Mask.gts  kicad_circular_tracks_test-F_Paste.gtp  kicad_circular_tracks_test-F_Silkscreen.gto  (+5 more)
subassembly/encoder/prototype/: README.md
subassembly/encoder/prototype/TestFirmware/: RotaryEncoderBringup.dwf3work
subassembly/encoder/prototype/TestFirmware/firmware/: CMakeLists.txt  Makefile  arm-none-eabi-gcc.cmake
subassembly/encoder/prototype/TestFirmware/firmware/BoardBringupFirmware.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk
subassembly/encoder/prototype/TestFirmware/firmware/device/: ATSAMD10D13AM.ld  ATSAMD10D13AM.svd
subassembly/encoder/prototype/TestFirmware/firmware/src/: controller.c  controller.h  main.c
subassembly/encoder/prototype/TestFirmware/firmware/src/comms/: comms.c  comms.h
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/: definitions.h  exceptions.c  harmony-manifest-success.yml  initialization.c  interrupts.c  interrupts.h  startup_gcc.c  startup_gcc.h
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/default.mhc/: GraphSettings.yml  core.yml  project.yml  sercom0.yml  settings.yml
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/peripheral/clock/: plib_clock.c
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/peripheral/nvic/: plib_nvic.c
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/peripheral/port/: plib_port.c  plib_port.h
subassembly/encoder/prototype/TestFirmware/firmware/src/config/default/peripheral/sercom/i2c_slave/: plib_sercom0_i2c_slave.c
subassembly/encoder/prototype/TestFirmware/firmware/src/encoder/: encoder.c  encoder.h
subassembly/encoder/prototype/TestFirmware/firmware/src/led_array/: led_architecture.md  led_array.c  led_array.h
subassembly/encoder/prototype/encoder_keyboard_module/: encoder_keyboard_module.kicad_pcb  encoder_keyboard_module.kicad_prl  encoder_keyboard_module.kicad_pro  encoder_keyboard_module.kicad_sch  fp-lib-table
subassembly/encoder/prototype/kicad_circular_tracks_test/: DESIGN.md  kicad_circular_tracks_test.kicad_pcb  kicad_circular_tracks_test.kicad_prl  kicad_circular_tracks_test.kicad_pro  kicad_circular_tracks_test.kicad_sch
subassembly/encoder/rotary_input_board/: DESIGN.md  rotary_input_board.kicad_pcb  rotary_input_board.kicad_prl  rotary_input_board.kicad_pro  rotary_input_board.kicad_sch
subassembly/encoder/rotary_input_board/output/: rotary_input_board-B_Cu.gbl  rotary_input_board-B_Mask.gbs  rotary_input_board-B_Paste.gbp  rotary_input_board-B_Silkscreen.gbo  rotary_input_board-Edge_Cuts.gm1  rotary_input_board-F_Cu.gtl  rotary_input_board-F_Mask.gts  rotary_input_board-F_Paste.gtp  rotary_input_board-F_Silkscreen.gto  rotary_input_board-In1_Cu.g2  rotary_input_board-In2_Cu.g3  rotary_input_board-NPTH.drl  rotary_input_board-PTH.drl  rotary_input_board-job.gbrjob
subassembly/keyboard_matrix/: DESIGN.md  fp-lib-table  keyboard_matrix.kicad_pcb  keyboard_matrix.kicad_prl  keyboard_matrix.kicad_sch  octave_switches.kicad_sch
subassembly/keyboard_matrix/firmware/: README.md
subassembly/keyboard_matrix/firmware/comms/: Cargo.toml
subassembly/keyboard_matrix/firmware/comms-firmware/: Cargo.toml  Embed.toml  memory.x
subassembly/keyboard_matrix/firmware/firmware/: Cargo.toml  Hardfault_Debugging.cmd
subassembly/keyboard_matrix/firmware/firmware/src/: kib_board.rs  main.rs  protocol.rs
subassembly/keyboard_matrix/firmware/illuminator/: Cargo.toml
subassembly/keyboard_matrix/firmware/illuminator/src/: data.rs  firework_pattern_illuminator.rs  illuminator.rs  keystrike_animation.rs  keystrike_illuminator.rs  lib.rs  pattern_illuminator.rs  rainbow_pattern_illuminator.rs
subassembly/keyboard_matrix/firmware/keyboard_matrix/: Cargo.toml
subassembly/keyboard_matrix/firmware/synth_engine/: Cargo.toml
subassembly/keyboard_matrix/keyboard_matrix/: keyboard_matrix.kicad_prl  keyboard_matrix.kicad_pro  keyswitch_matrix.kicad_sch  ~keyboard_matrix.kicad_pcb.lck
subassembly/keyboard_matrix/keyboard_matrix/output/: keyboard_matrix-B_Cu.gbr  keyboard_matrix-B_Mask.gbr  keyboard_matrix-B_Paste.gbr  keyboard_matrix-F_Paste.gbr  keyboard_matrix-NPTH.drl  keyboard_matrix-PTH.drl  keyboard_matrix-job.gbrjob
subassembly/keyboard_matrix/output/: keyboard_matrix-B_Cu.gbr  keyboard_matrix-B_Mask.gbr  keyboard_matrix-B_Paste.gbr  keyboard_matrix-B_Silkscreen.gbr  keyboard_matrix-Edge_Cuts.gbr  keyboard_matrix-F_Cu.gbr  keyboard_matrix-F_Mask.gbr  keyboard_matrix-F_Paste.gbr  keyboard_matrix-F_Silkscreen.gbr  keyboard_matrix-NPTH.drl  keyboard_matrix-PTH.drl  keyboard_matrix-job.gbrjob
(+30 files in other folders)
