[package]
authors = ["Ben Von Handorf <ben@skyironstudio.com>"]
edition = "2018"
readme = "README.md"
name = "kib_bringup"
version = "0.1.0"

# for cargo flash
[package.metadata]
chip = "ATSAMD10D13AM"

[dependencies.panic-semihosting]
version = "0.6"
optional = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
panic-halt = "0.2"
# panic-probe = "0.3"
rtt-target = { version = "0.5.0" }

cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"

atsamd-hal = { git = "https://github.com/benvonhandorf/atsamd.git", branch="atsamd10d" }
samd10_bare = { git = "https://github.com/benvonhandorf/atsamd.git", branch="atsamd10d" }
smart-leds = "0.3.0"
more-asserts = "0.3.1"

keyboard_matrix = { path = "../keyboard_matrix" }
illuminator = { path = "../illuminator" }
synth_engine = { path = "../synth_engine" }
comms = { path = "../comms" }

[dependencies.ws2812-timer-delay]
version = "0.3.0"
# features = ["slow"]


[features]
default = ["atsamd-hal/samd10d", "atsamd-hal/samd10d-rt", "atsamd-hal/unproven"]


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
# [[bin]]
# name = "cargo-quick"
# test = false
# bench = false

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "fat" # better optimizations